--- a/pub.bib
+++ b/pub.bib
@@ -118,21 +118,25 @@
 
 @inproceedings{raake2017_71,
   author       = {{Alexander Raake, Marie-Neige Garcia, Werner Robitza, Peter List, Steve G\"oring and Bernhard Feiten}},
-  title        = {{A Bitstream-based, Scalable Video-Quality Model for HTTP Adaptive Streaming: ITU-T P.1203.1}},
-  year         = {2017},
-  month        = {05},
-  file         = {qomex2017/71-raake-2017-a_bitstreambased_scalable_videoquality_model_for_http_adaptive_streaming_itut_p12031-long.pdf},
-  booktitle    = {Quality of Multimedia Experience (QoMEX), 2017 Ninth International Conference on},
-  organization = {IEEE}
+  booktitle={2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
+  title={A bitstream-based, scalable video-quality model for HTTP adaptive streaming: ITU-T P.1203.1},
+  year={2017},
+  pages={1-6},
+  keywords={Adaptation models;Bit rate;Databases;Quality assessment;Streaming media;Video recording;HAS;HTTP Adaptive Streaming;Quality model;Quality of Experience;Standardization;Video quality},
+  doi={10.1109/QoMEX.2017.7965631},
+  month={May},
+  pdf = {./pdfs/2017/Qomex2017_Raake_CameraReady.pdf}
 }
 
 @inproceedings{goering2017_81,
-  author       = {{Steve G\"oring, Alexander Raake and Bernhard Feiten}},
-  title        = {{A Framework for QoE Analysis of Encrypted Videos Streams}},
-  year         = {2017},
-  month        = {05},
-  file         = {qomex2017/81-goering-2017-a_framework_for_qoe_analysis_of_encrypted_videos_streams-short.pdf},
-  booktitle    = {Quality of Multimedia Experience (QoMEX), 2017 Ninth International Conference on},
-  organization = {IEEE},
-  poster = {./pdfs/2017/qomex_poster.pdf}
+  author={Steve G\"oring, Alexander Raake and Bernhard Feiten},
+  booktitle={2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
+  title={A framework for QoE analysis of encrypted video streams},
+  year={2017},
+  pages={1-3},
+  keywords={Cryptography;Delays;Estimation;Quality assessment;Streaming media;Video recording;YouTube},
+  doi={10.1109/QoMEX.2017.7965640},
+  month={May},
+  pdf = {./pdfs/2017/qomex_enc_paper.pdf},
+  poster = {./pdfs/2017/qomex_enc_poster.pdf},
 }
