add missing paper

--- a/pub.bib
+++ b/pub.bib
@@ -140,3 +140,13 @@
   pdf = {./pdfs/2017/qomex_enc_paper.pdf},
   poster = {./pdfs/2017/qomex_enc_poster.pdf},
 }
+
+@article{goering2018,
+  author={Steve G\"oring, Janto Skowronek and Alexander Raake},
+  journal = "Electronic Imaging ",
+  title={DeViQ -- A deep no reference video quality model},
+  year={2018},
+  pdf = {./pdfs/2018/deviq_paper.pdf},
+  slides = {./pdfs/2018/deviq_slides.pdf},
+
+}
