--- a/pub.bib
+++ b/pub.bib
@@ -147,6 +147,5 @@
   title={DeViQ -- A deep no reference video quality model},
   year={2018},
   pdf = {./pdfs/2018/deviq_paper.pdf},
-  slides = {./pdfs/2018/deviq_slides.pdf},
-
+  slides = {./pdfs/2018/deviq_slides.pdf}
 }
