add new papers and slides to the pub

--- a/pub.bib
+++ b/pub.bib
@@ -149,3 +149,42 @@
   pdf = {./pdfs/2018/deviq_paper.pdf},
   slides = {./pdfs/2018/deviq_slides.pdf}
 }
+
+@INPROCEEDINGS{Gori1805:Extended,
+author={Steve {G{\"o}ring} and Konstantin Brand and Alexander Raake},
+title="Extended Features using Machine Learning Techniques for Photo Liking
+Prediction",
+booktitle="2018 Tenth International Conference on Quality of Multimedia Experience
+(QoMEX) (QoMEX 2018)",
+address="Sardinia, Italy",
+days=28,
+month=5,
+year={2018},
+pdf={./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction.pdf},
+slides={./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction_slides.pdf}
+}
+
+
+@INPROCEEDINGS{Robi1805:Measuring,
+author={Werner Robitza and Dhananjay Kittur and Alexander Dethof and Steve
+{G{\"o}ring} and Bernhard Feiten and Alexander Raake},
+title="Measuring {YouTube} {QoE} Under Constrained Bandwidth Conditions -
+Comparing Classical and Behavioral Monitoring",
+booktitle="2018 Tenth International Conference on Quality of Multimedia Experience
+(QoMEX) (QoMEX 2018)",
+address="Sardinia, Italy",
+days=28,
+month=5,
+year={2018},
+keywords="QoE; YouTube; P.1203; Quality monitoring; User behavior"
+}
+
+@inproceedings{Robitza2017d,
+ address = {Amsterdam},
+ author = {Robitza, Werner and G{\"{o}}ring, Steve and Raake, Alexander and Lindegren, David and Heikkil{\"{a}}, Gunnar and Gustafsson, J{\"{o}}rgen and List, Peter and Feiten, Bernhard and W{\"{u}}stenhagen, Ulf and Garcia, Marie-Neige and Yamagishi, Kazuhisa and Broom, Simon},
+ booktitle = {9th ACM Multimedia Systems Conference},
+ doi = {10.1145/3204949.3208124},
+ isbn = {9781450351928},
+ title = {{HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 – Open Databases and Software}},
+ year = {2018}
+ }
