--- a/pub.bib
+++ b/pub.bib
@@ -143,7 +143,7 @@
 
 @article{goering2018,
   author={Steve G\"oring, Janto Skowronek and Alexander Raake},
-  journal = "Electronic Imaging ",
+  journal = "Electronic Imaging, Human Vision Electronic Imaging",
   title={DeViQ -- A deep no reference video quality model},
   year={2018},
   pdf = {./pdfs/2018/deviq_paper.pdf},
@@ -181,10 +181,10 @@ keywords="QoE; YouTube; P.1203; Quality monitoring; User behavior"
 
 @inproceedings{Robitza2017d,
  address = {Amsterdam},
- author = {Robitza, Werner and G{\"{o}}ring, Steve and Raake, Alexander and Lindegren, David and Heikkil{\"{a}}, Gunnar and Gustafsson, J{\"{o}}rgen and List, Peter and Feiten, Bernhard and W{\"{u}}stenhagen, Ulf and Garcia, Marie-Neige and Yamagishi, Kazuhisa and Broom, Simon},
+ author = {Werner Robitza and Steve G{\"{o}}ring and Alexander Raake and David Lindegren and Gunnar Heikkil{\"{a}} and J{\"{o}}rgen Gustafsson and Peter List and Bernhard Feiten and Ulf W{\"{u}}stenhagen and Marie-Neige Garcia and Kazuhisa Yamagishi and Simon Broom},
  booktitle = {9th ACM Multimedia Systems Conference},
  doi = {10.1145/3204949.3208124},
  isbn = {9781450351928},
- title = {{HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 – Open Databases and Software}},
+ title = {{HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 -- Open Databases and Software}},
  year = {2018}
  }
