--- a/pub.bib
+++ b/pub.bib
@@ -188,3 +188,14 @@ keywords="QoE; YouTube; P.1203; Quality monitoring; User behavior"
  title = {{HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 -- Open Databases and Software}},
  year = {2018}
  }
+
+ @inproceedings{goering2018Deimeq,
+  title={deimeq -- A Deep Neural Network Based Hybrid
+No-reference Image Quality Model},
+  author={Steve G{\"{o}}ring and Alexander Raake},
+  booktitle={Visual Information Processing (EUVIP), 2018 7th European Workshop on},
+  pages={1--6},
+  year={2018},
+  note={to appear},
+  organization={IEEE}
+}
