--- a/pub.bib
+++ b/pub.bib
@@ -199,3 +199,22 @@ No-reference Image Quality Model},
   note={to appear},
   organization={IEEE}
 }
+
+
+@article{rao2019,
+  author={Rakesh Rao Ramachandra Rao, Steve Göring, Patrick Vogel, Nicolas  Pachatz, Juan Jose Villamar Villarreal, Werner Robitza, Peter List,  Bernhard Feiten, and Alexander Raake},
+  journal = "Electronic Imaging, Human Vision Electronic Imaging",
+  title={Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203},
+  year={2019},
+  note={to appear}
+}
+
+
+@article{goering2019,
+  author={Steve Göring, Julian Zebelein, Simon Wedel, Dominik Keller and  Alexander Raake},
+  journal = "Electronic Imaging, Human Vision Electronic Imaging",
+  title={Analyze And Predict the Perceptibility of UHD Video Contents},
+  year={2019},
+  note={to appear}
+}
+
