add stephans paper, where i'm also now author ;)

--- a/pub.bib
+++ b/pub.bib
@@ -200,8 +200,17 @@ No-reference Image Quality Model},
 
 @article{rao2019,
   author={Rakesh Rao Ramachandra Rao, Steve Göring, Patrick Vogel, Nicolas  Pachatz, Juan Jose Villamar Villarreal, Werner Robitza, Peter List,  Bernhard Feiten, and Alexander Raake},
-  journal = "Electronic Imaging, Human Vision Electronic Imaging",
+  journal = "Electronic Imaging",
   title={Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203},
+  year={2019},
+  note={to appear}
+}
+
+
+@article{fremerey2019,
+  author={Stephan Fremerey, Rachel Huang, Steve Göring, and Alexander Raake},
+  journal = "Electronic Imaging, Human Vision Electronic Imaging",
+  title={Are people pixel-peeping 360° videos?},
   year={2019},
   note={to appear}
 }
