--- a/bibs/goering2018Deimeq.bib
+++ b/bibs/goering2018Deimeq.bib
@@ -6,7 +6,7 @@ No-reference Image Quality Model},
   pages={1--6},
   year={2018},
   note={to appear},
-  organization={IEEE}
+  organization={IEEE},
 }
 
 
