--- a/pub.bib
+++ b/pub.bib
@@ -194,7 +194,8 @@ No-reference Image Quality Model},
   pages={1--6},
   year={2018},
   note={to appear},
-  organization={IEEE}
+  organization={IEEE},
+  slides={./pdfs/2018/deimeq_slides.pdf}
 }
 
 
