add new publication

--- a/pub.bib
+++ b/pub.bib
@@ -225,3 +225,10 @@ No-reference Image Quality Model},
   note={to appear}
 }
 
+@inproceedings{singla2019,
+ address = {Amherst, MA, USA},
+ author = {Ashutosh Singla and Steve G{\"{o}}ring and Alexander Raake and Rob Koenen and Britta Meixner and Thomas Buchholz },
+ booktitle = {10th ACM Multimedia Systems Conference},
+  title = {{Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos}},
+ year = {2019}
+ }
