--- a/pub.bib
+++ b/pub.bib
@@ -148,32 +148,32 @@
 }
 
 @INPROCEEDINGS{Gori1805:Extended,
-author={Steve {G{\"o}ring} and Konstantin Brand and Alexander Raake},
-title="Extended Features using Machine Learning Techniques for Photo Liking
-Prediction",
-booktitle="2018 Tenth International Conference on Quality of Multimedia Experience
-(QoMEX) (QoMEX 2018)",
-address="Sardinia, Italy",
-days=28,
-month=5,
-year={2018},
-pdf={./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction.pdf},
-slides={./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction_slides.pdf}
+  author={Steve {G{\"o}ring} and Konstantin Brand and Alexander Raake},
+  title="Extended Features using Machine Learning Techniques for Photo Liking
+  Prediction",
+  booktitle="2018 Tenth International Conference on Quality of Multimedia Experience
+  (QoMEX) (QoMEX 2018)",
+  address="Sardinia, Italy",
+  days=28,
+  month=5,
+  year={2018},
+  pdf={./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction.pdf},
+  slides={./pdfs/2018/2018-qomex-Extended Features using Machine Learning Techniques for Photo Liking Prediction_slides.pdf}
 }
 
 
 @INPROCEEDINGS{Robi1805:Measuring,
-author={Werner Robitza and Dhananjay Kittur and Alexander Dethof and Steve
-{G{\"o}ring} and Bernhard Feiten and Alexander Raake},
-title="Measuring {YouTube} {QoE} Under Constrained Bandwidth Conditions -
-Comparing Classical and Behavioral Monitoring",
-booktitle="2018 Tenth International Conference on Quality of Multimedia Experience
-(QoMEX) (QoMEX 2018)",
-address="Sardinia, Italy",
-days=28,
-month=5,
-year={2018},
-keywords="QoE; YouTube; P.1203; Quality monitoring; User behavior"
+  author={Werner Robitza and Dhananjay Kittur and Alexander Dethof and Steve
+  {G{\"o}ring} and Bernhard Feiten and Alexander Raake},
+  title="Measuring {YouTube} {QoE} Under Constrained Bandwidth Conditions -
+  Comparing Classical and Behavioral Monitoring",
+  booktitle="2018 Tenth International Conference on Quality of Multimedia Experience
+  (QoMEX) (QoMEX 2018)",
+  address="Sardinia, Italy",
+  days=28,
+  month=5,
+  year={2018},
+  keywords="QoE; YouTube; P.1203; Quality monitoring; User behavior"
 }
 
 @inproceedings{Robitza2017d,
@@ -226,9 +226,40 @@ No-reference Image Quality Model},
 }
 
 @inproceedings{singla2019,
- address = {Amherst, MA, USA},
- author = {Ashutosh Singla and Steve G{\"{o}}ring and Alexander Raake and Rob Koenen and Britta Meixner and Thomas Buchholz },
- booktitle = {10th ACM Multimedia Systems Conference},
+  address = {Amherst, MA, USA},
+  author = {Ashutosh Singla and Steve G{\"{o}}ring and Alexander Raake and Rob Koenen and Britta Meixner and Thomas Buchholz },
+  booktitle = {10th ACM Multimedia Systems Conference},
   title = {{Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos}},
- year = {2019}
+  year = {2019},
+   note={to appear}
  }
+
+@inproceedings{goering2019qomex,
+  author={Steve {G{\"o}ring} and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
+  title="nofu - A Lightweight {No-Reference} Pixel Based Video Quality Model for
+  Gaming {QoE}",
+  BOOKTITLE="2019 Eleventh International Conference on Quality of Multimedia Experience
+  (QoMEX) (QoMEX 2019)",
+  address="Berlin, Germany",
+  days=4,
+  month=jun,
+  year=2019,
+  ABSTRACT="Popularity of streaming services for gaming videos has increased
+  tremendously over the last years, e.g. Twitch and YoutubeGaming. Compared
+  to classical video streaming applications, gaming videos have additional
+  requirements. For example, it is important that videos are streamed live
+  with only a small delay. In addition, users expect low stalling, waiting
+  time and in general high video quality during streaming, e.g. using http
+  based adaptive streaming. These requirements lead to different challenges
+  for quality prediction in case of streamed gaming videos. We describe newly
+  developed features and a no-reference video quality machine learning model,
+  that uses only the recorded video to predict video quality scores. In
+  different evaluation experiments, we compare our developed model that is
+  called nofu, with state-of-the-art metrics, that are either reduced or full
+  reference metrics. In addition, we trained a no-reference baseline model
+  using brisque+niqe features. We show that our model has a similar or better
+  performance than other metrics. Furthermore, nofu outperforms VMAF for
+  subjective gaming QoE prediction, even though nofu does not require any
+  reference video.",
+  note="to appear"
+}
