--- a/bibs/goering2019.bib
+++ b/bibs/goering2019.bib
@@ -1,7 +1,9 @@
-@article{goering2019,
+@inproceedings{goering2019,
   author={Steve Göring, Julian Zebelein, Simon Wedel, Dominik Keller and  Alexander Raake},
   journal = "Electronic Imaging, Human Vision Electronic Imaging",
   title={Analyze And Predict the Perceptibility of UHD Video Contents},
+  doi={https://doi.org/10.2352/ISSN.2470-1173.2019.12.HVEI-215},
+  url={https://www.ingentaconnect.com/content/ist/ei/pre-prints/content-ei2019-hvei-215;jsessionid=3hkwbc6tro23a.x-ic-live-01#Cits},
   year={2019},
   note={to appear}
 }
