--- a/bibs/singla2019.bib
+++ b/bibs/singla2019.bib
@@ -1,7 +1,9 @@
 @inproceedings{singla2019,
- address = {Amherst, MA, USA},
- author = {Ashutosh Singla and Steve G{\"{o}}ring and Alexander Raake and Rob Koenen and Britta Meixner and Thomas Buchholz },
- booktitle = {10th ACM Multimedia Systems Conference},
+  address = {Amherst, MA, USA},
+  author = {Ashutosh Singla and Steve G{\"{o}}ring and Alexander Raake and Rob Koenen and Britta Meixner and Thomas Buchholz },
+  booktitle = {10th ACM Multimedia Systems Conference},
   title = {{Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos}},
- year = {2019}
+  year = {2019},
+   note={to appear}
  }
+
