--- a/bibs/goering2019qomex.bib
+++ b/bibs/goering2019qomex.bib
@@ -1,7 +1,7 @@
 @inproceedings{goering2019qomex,
   author={Steve {G{\"o}ring} and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
   title="nofu - A Lightweight {No-Reference} Pixel Based Video Quality Model for
-  Gaming {QoE}",
+  Gaming Content",
   BOOKTITLE="2019 Eleventh International Conference on Quality of Multimedia Experience
   (QoMEX) (QoMEX 2019)",
   address="Berlin, Germany",
