--- a/pub.bib
+++ b/pub.bib
@@ -224,7 +224,8 @@ No-reference Image Quality Model},
   doi={https://doi.org/10.2352/ISSN.2470-1173.2019.12.HVEI-215},
   url={https://www.ingentaconnect.com/content/ist/ei/pre-prints/content-ei2019-hvei-215;jsessionid=3hkwbc6tro23a.x-ic-live-01#Cits},
   year={2019},
-  note={to appear}
+  pdf={./pdfs/2019/uhd_hd_paper.pdf},
+  slides={./pdfs/2019/uhd_hd_paper_slides.pdf}
 }
 
 @inproceedings{singla2019,
@@ -246,22 +247,5 @@ No-reference Image Quality Model},
   days=4,
   month=jun,
   year=2019,
-  ABSTRACT="Popularity of streaming services for gaming videos has increased
-  tremendously over the last years, e.g. Twitch and YoutubeGaming. Compared
-  to classical video streaming applications, gaming videos have additional
-  requirements. For example, it is important that videos are streamed live
-  with only a small delay. In addition, users expect low stalling, waiting
-  time and in general high video quality during streaming, e.g. using http
-  based adaptive streaming. These requirements lead to different challenges
-  for quality prediction in case of streamed gaming videos. We describe newly
-  developed features and a no-reference video quality machine learning model,
-  that uses only the recorded video to predict video quality scores. In
-  different evaluation experiments, we compare our developed model that is
-  called nofu, with state-of-the-art metrics, that are either reduced or full
-  reference metrics. In addition, we trained a no-reference baseline model
-  using brisque+niqe features. We show that our model has a similar or better
-  performance than other metrics. Furthermore, nofu outperforms VMAF for
-  subjective gaming QoE prediction, even though nofu does not require any
-  reference video.",
-  note="to appear"
+  pdf={./pdfs/2019/nofu_paper.pdf},
 }
