--- a/bibs/goering2018Deimeq.bib
+++ b/bibs/goering2018Deimeq.bib
@@ -5,7 +5,7 @@ No-reference Image Quality Model},
   booktitle={Visual Information Processing (EUVIP), 2018 7th European Workshop on},
   pages={1--6},
   year={2018},
-  note={to appear},
+  url={https://ieeexplore.ieee.org/document/8611703},
   organization={IEEE},
 }
 
