added nofu slides

--- a/pub.bib
+++ b/pub.bib
@@ -248,4 +248,5 @@ No-reference Image Quality Model},
   month=jun,
   year=2019,
   pdf={./pdfs/2019/nofu_paper.pdf},
+  slides={./pdfs/2019/nofu_slides.pdf}
 }
