--- a/pub.bib
+++ b/pub.bib
@@ -234,8 +234,17 @@ No-reference Image Quality Model},
   booktitle = {10th ACM Multimedia Systems Conference},
   title = {{Subjective Quality Evaluation of Tile-based Streaming for Omnidirectional Videos}},
   year = {2019},
-   note={to appear}
  }
+
+@inproceedings{singla2019vr,
+  address = {Osaka, Japan},
+  author = {Ashutosh Singla and  Rakesh Rao Ramachandra Rao and Steve G{\"{o}}ring and Alexander Raake},
+  booktitle = {26th IEEE Conference on Virtual Reality and 3D User Interfaces},
+  title = {{Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols}},
+  year = {2019},
+  month = 03,
+ }
+
 
 @inproceedings{goering2019qomex,
   author={Steve {G{\"o}ring} and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
