--- a/bibs/singla2019vr.bib
+++ b/bibs/singla2019vr.bib
@@ -4,7 +4,7 @@
   booktitle = {26th IEEE Conference on Virtual Reality and 3D User Interfaces},
   title = {{Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols}},
   year = {2019},
-  month = 03,
+  month = mar,
  }
 
 
