--- a/pub.bib
+++ b/pub.bib
@@ -242,7 +242,7 @@ No-reference Image Quality Model},
   booktitle = {26th IEEE Conference on Virtual Reality and 3D User Interfaces},
   title = {{Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols}},
   year = {2019},
-  month = 03,
+  month = mar,
  }
 
 
