add missing presentation and update publication list

--- a/bibs/fremerey2019.bib
+++ b/bibs/fremerey2019.bib
@@ -3,7 +3,7 @@
   journal = "Electronic Imaging, Human Vision Electronic Imaging",
   title={Are people pixel-peeping 360° videos?},
   year={2019},
-  note={to appear}
+  url={https://ist.publisher.ingentaconnect.com/search/article?option2=author&value2=G%c3%b6ring%2c+Steve&pageSize=10&index=3}
 }
 
 
