--- a/pub.bib
+++ b/pub.bib
@@ -136,6 +136,7 @@
   month={May},
   pdf = {./pdfs/2017/qomex_enc_paper.pdf},
   poster = {./pdfs/2017/qomex_enc_poster.pdf},
+  slides = {./pdfs/2017/qomex_enc_slides.pdf},
 }
 
 @article{goering2018,
@@ -204,7 +205,7 @@ No-reference Image Quality Model},
   journal = "Electronic Imaging",
   title={Adaptive video streaming with current codecs and formats: Extensions to parametric video quality model ITU-T P.1203},
   year={2019},
-  note={to appear}
+  url={https://ist.publisher.ingentaconnect.com/contentone/ist/ei/2019/00002019/00000010/art00015}
 }
 
 
@@ -213,7 +214,7 @@ No-reference Image Quality Model},
   journal = "Electronic Imaging, Human Vision Electronic Imaging",
   title={Are people pixel-peeping 360° videos?},
   year={2019},
-  note={to appear}
+  url={https://ist.publisher.ingentaconnect.com/search/article?option2=author&value2=G%c3%b6ring%2c+Steve&pageSize=10&index=3}
 }
 
 
@@ -238,13 +239,25 @@ No-reference Image Quality Model},
 
 @inproceedings{singla2019vr,
   address = {Osaka, Japan},
-  author = {Ashutosh Singla and  Rakesh Rao Ramachandra Rao and Steve G{\"{o}}ring and Alexander Raake},
+  author = {Ashutosh Singla and Rakesh Rao Ramachandra Rao and Steve G{\"{o}}ring and Alexander Raake},
   booktitle = {26th IEEE Conference on Virtual Reality and 3D User Interfaces},
   title = {{Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols}},
   year = {2019},
   month = mar,
  }
 
+@inproceedings{fremerey2019qomex,
+  author={Stephan Fremerey and Frank Hofmeyer and Steve G{\"o}ring and Alexander Raake},
+  booktitle={2019 Eleventh International Conference on Quality of Multimedia Experience (QoMEX)},
+  title={Impact of Various Motion Interpolation Algorithms on 360° Video QoE},
+  year={2019},
+  volume={},
+  number={},
+  pages={1-3},
+  doi={10.1109/QoMEX.2019.8743307},
+  ISSN={2472-7814},
+  month={June},
+}
 
 @inproceedings{goering2019qomex,
   author={Steve {G{\"o}ring} and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
@@ -256,6 +269,9 @@ No-reference Image Quality Model},
   days=4,
   month=jun,
   year=2019,
+  doi={10.1109/QoMEX.2019.8743262},
+  ISSN={2472-7814},
+  url={https://ieeexplore.ieee.org/document/8743262},
   pdf={./pdfs/2019/nofu_paper.pdf},
   slides={./pdfs/2019/nofu_slides.pdf}
 }
