--- a/bibs/goering2019qomex.bib
+++ b/bibs/goering2019qomex.bib
@@ -8,4 +8,7 @@
   days=4,
   month=jun,
   year=2019,
+  doi={10.1109/QoMEX.2019.8743262},
+  ISSN={2472-7814},
+  url={https://ieeexplore.ieee.org/document/8743262},
 }
