--- a/pub.bib
+++ b/pub.bib
@@ -187,7 +187,7 @@
  year = {2018}
  }
 
- @inproceedings{goering2018Deimeq,
+@inproceedings{goering2018Deimeq,
   title={deimeq -- A Deep Neural Network Based Hybrid
 No-reference Image Quality Model},
   author={Steve G{\"{o}}ring and Alexander Raake},
@@ -274,4 +274,16 @@ No-reference Image Quality Model},
   url={https://ieeexplore.ieee.org/document/8743262},
   pdf={./pdfs/2019/nofu_paper.pdf},
   slides={./pdfs/2019/nofu_slides.pdf}
+}
+
+
+@inproceedings{goering2019Intra,
+  title={Evaluation of Intra-coding based image compression},
+  author={Steve G{\"{o}}ring and Alexander Raake},
+  booktitle={Visual Information Processing (EUVIP), 2019 8th European Workshop on},
+  pages={1--6},
+  year={2019},
+  %url={https://ieeexplore.ieee.org/document/8611703},
+  organization={IEEE},
+  %slides={./pdfs/2018/deimeq_slides.pdf}
 }
