--- a/bibs/goering2019Intra.bib
+++ b/bibs/goering2019Intra.bib
@@ -1,10 +1,12 @@
 @inproceedings{goering2019Intra,
   title={Evaluation of Intra-coding based image compression},
   author={Steve G{\"{o}}ring and Alexander Raake},
-  booktitle={Visual Information Processing (EUVIP), 2019 8th European Workshop on},
+  booktitle={2019 8th European Workshop on Visual Information Processing (EUVIP),},
   pages={1--6},
   year={2019},
   %url={https://ieeexplore.ieee.org/document/8611703},
   organization={IEEE},
+  demo={https://git.io/Je0ip},
   %slides={./pdfs/2018/deimeq_slides.pdf}
 }
+
