--- a/pub.bib
+++ b/pub.bib
@@ -280,10 +280,31 @@ No-reference Image Quality Model},
 @inproceedings{goering2019Intra,
   title={Evaluation of Intra-coding based image compression},
   author={Steve G{\"{o}}ring and Alexander Raake},
-  booktitle={Visual Information Processing (EUVIP), 2019 8th European Workshop on},
+  booktitle={2019 8th European Workshop on Visual Information Processing (EUVIP),},
   pages={1--6},
   year={2019},
   %url={https://ieeexplore.ieee.org/document/8611703},
   organization={IEEE},
+  demo={https://git.io/Je0ip},
   %slides={./pdfs/2018/deimeq_slides.pdf}
+}
+
+@inproceedings{rao2019Db,
+    author = {Rakesh Rao Ramachandra Rao and Steve G\"oring and Werner Robitza and Bernhard Feiten and Alexander Raake},
+    title = {AVT-VQDB-UHD-1: A Large Scale Video Quality Database for UHD-1},
+    booktitle={2019 IEEE ISM},
+    year = {2019},
+    pages={1-8},
+    volume={},
+    month={Dec}
+}
+
+@inproceedings{goering2019cencro,
+    author = {Steve G\"oring and Christopher Kr\"ammer and Alexander Raake},
+    title = {cencro -- Speedup of Video Quality Calculation using Center Cropping},
+    booktitle={2019 IEEE ISM},
+    year = {2019},
+    pages={1-8},
+    volume={},
+    month={Dec}
 }
