add slides of my talk

--- a/bibs/goering2019Intra.bib
+++ b/bibs/goering2019Intra.bib
@@ -4,9 +4,8 @@
   booktitle={2019 8th European Workshop on Visual Information Processing (EUVIP),},
   pages={1--6},
   year={2019},
-  %url={https://ieeexplore.ieee.org/document/8611703},
+  %url={https://ieeexplore.ieee.org/document/TBD},
   organization={IEEE},
   demo={https://git.io/Je0ip},
-  %slides={./pdfs/2018/deimeq_slides.pdf}
 }
 
