--- a/pub.bib
+++ b/pub.bib
@@ -283,10 +283,10 @@ No-reference Image Quality Model},
   booktitle={2019 8th European Workshop on Visual Information Processing (EUVIP),},
   pages={1--6},
   year={2019},
-  %url={https://ieeexplore.ieee.org/document/8611703},
+  %url={https://ieeexplore.ieee.org/document/TBD},
   organization={IEEE},
   demo={https://git.io/Je0ip},
-  %slides={./pdfs/2018/deimeq_slides.pdf}
+  slides={./pdfs/2019/image_comp_slides.pdf}
 }
 
 @inproceedings{rao2019Db,
