add cencro slides, presented at ISM 2019

--- a/pub.bib
+++ b/pub.bib
@@ -306,5 +306,6 @@ No-reference Image Quality Model},
     year = {2019},
     pages={1-8},
     volume={},
-    month={Dec}
+    month={Dec},
+    slides={./pdfs/2019/cencro_presentation.pdf}
 }
