--- a/bibs/goering2019cencro.bib
+++ b/bibs/goering2019cencro.bib
@@ -1,7 +1,7 @@
 @inproceedings{goering2019cencro,
     author = {Steve G\"oring and Christopher Kr\"ammer and Alexander Raake},
     title = {cencro -- Speedup of Video Quality Calculation using Center Cropping},
-    booktitle={2019 IEEE ISM},
+    booktitle={21st IEEE International Symposium on Multimedia (2019 IEEE ISM)},
     year = {2019},
     pages={1-8},
     volume={},
