--- a/pub.bib
+++ b/pub.bib
@@ -292,7 +292,7 @@ No-reference Image Quality Model},
 @inproceedings{rao2019Db,
     author = {Rakesh Rao Ramachandra Rao and Steve G\"oring and Werner Robitza and Bernhard Feiten and Alexander Raake},
     title = {AVT-VQDB-UHD-1: A Large Scale Video Quality Database for UHD-1},
-    booktitle={2019 IEEE ISM},
+    booktitle={21st IEEE International Symposium on Multimedia (2019 IEEE ISM)},
     year = {2019},
     pages={1-8},
     volume={},
@@ -302,7 +302,7 @@ No-reference Image Quality Model},
 @inproceedings{goering2019cencro,
     author = {Steve G\"oring and Christopher Kr\"ammer and Alexander Raake},
     title = {cencro -- Speedup of Video Quality Calculation using Center Cropping},
-    booktitle={2019 IEEE ISM},
+    booktitle={21st IEEE International Symposium on Multimedia (2019 IEEE ISM)},
     year = {2019},
     pages={1-8},
     volume={},
