add missing paper

--- a/pub.bib
+++ b/pub.bib
@@ -196,7 +196,8 @@ No-reference Image Quality Model},
   year={2018},
   url={https://ieeexplore.ieee.org/document/8611703},
   organization={IEEE},
-  slides={./pdfs/2018/deimeq_slides.pdf}
+  slides={./pdfs/2018/deimeq_slides.pdf},
+  pdf={./pdfs/2018/deimeq_paper.pdf}
 }
 
 
