--- a/pub.bib
+++ b/pub.bib
@@ -163,18 +163,13 @@
 }
 
 
-@INPROCEEDINGS{Robi1805:Measuring,
-  author={Werner Robitza and Dhananjay Kittur and Alexander Dethof and Steve
-  {G{\"o}ring} and Bernhard Feiten and Alexander Raake},
-  title="Measuring {YouTube} {QoE} Under Constrained Bandwidth Conditions -
-  Comparing Classical and Behavioral Monitoring",
-  booktitle="2018 Tenth International Conference on Quality of Multimedia Experience
-  (QoMEX) (QoMEX 2018)",
-  address="Sardinia, Italy",
-  days=28,
-  month=5,
+@inproceedings{robitza2018measuring,
+  title={Measuring YouTube QoE with ITU-T P. 1203 under Constrained Bandwidth Conditions},
+  author={Robitza, Werner and Kittur, Dhananjaya G and Dethof, Alexander M and G{\"o}rin, Steve and Feiten, Bernhard and Raake, Alexander},
+  booktitle={2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX)},
+  pages={1--6},
   year={2018},
-  keywords="QoE; YouTube; P.1203; Quality monitoring; User behavior"
+  organization={IEEE}
 }
 
 @inproceedings{Robitza2017d,
