--- a/bibs/goering2019Intra.bib
+++ b/bibs/goering2019Intra.bib
@@ -7,5 +7,6 @@
   %url={https://ieeexplore.ieee.org/document/TBD},
   organization={IEEE},
   demo={https://git.io/Je0ip},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/image_compression},
 }
 
