--- a/pub.bib
+++ b/pub.bib
@@ -179,7 +179,8 @@
  doi = {10.1145/3204949.3208124},
  isbn = {9781450351928},
  title = {{HTTP Adaptive Streaming QoE Estimation with ITU-T Rec. P.1203 -- Open Databases and Software}},
- year = {2018}
+ year = {2018},
+ code={https://github.com/itu-p1203}
  }
 
 @inproceedings{goering2018Deimeq,
@@ -282,6 +283,7 @@ No-reference Image Quality Model},
   %url={https://ieeexplore.ieee.org/document/TBD},
   organization={IEEE},
   demo={https://git.io/Je0ip},
+  code={https://github.com/Telecommunication-Telemedia-Assessment/image_compression},
   slides={./pdfs/2019/image_comp_slides.pdf}
 }
 
@@ -303,5 +305,6 @@ No-reference Image Quality Model},
     pages={1-8},
     volume={},
     month={Dec},
-    slides={./pdfs/2019/cencro_presentation.pdf}
+    slides={./pdfs/2019/cencro_presentation.pdf},
+    code={https://github.com/Telecommunication-Telemedia-Assessment/cencro}
 }
