add new publications

--- a/pub.bib
+++ b/pub.bib
@@ -308,3 +308,23 @@ No-reference Image Quality Model},
     slides={./pdfs/2019/cencro_presentation.pdf},
     code={https://github.com/Telecommunication-Telemedia-Assessment/cencro}
 }
+
+@inproceedings{rao2020p1204,
+  author={Rakesh Rao {Ramachandra Rao} and Steve G\"oring and Werner Robitza and Alexander Raake and Bernhard Feiten and Peter List and Ulf Wüstenhagen},
+  title={Bitstream-based Model Standard for 4K/UHD: ITU-T P.1204.3 -- Model Details, Evaluation, Analysis and Open Source Implementation},
+  BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
+  address="Athlone, Irland",
+  days=26,
+  month=May,
+  year=2020,
+}
+
+@inproceedings{goering2020prenc,
+  author={Steve G\"oring and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
+  title={Prenc -- Predict Number Of Video Encoding Passes With Machine Learning},
+  BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
+  address="Athlone, Irland",
+  days=26,
+  month=May,
+  year=2020,
+}
