--- a/pub.bib
+++ b/pub.bib
@@ -313,7 +313,7 @@ No-reference Image Quality Model},
   author={Rakesh Rao {Ramachandra Rao} and Steve G\"oring and Werner Robitza and Alexander Raake and Bernhard Feiten and Peter List and Ulf Wüstenhagen},
   title={Bitstream-based Model Standard for 4K/UHD: ITU-T P.1204.3 -- Model Details, Evaluation, Analysis and Open Source Implementation},
   BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
-  address="Athlone, Irland",
+  address="Athlone, Ireland",
   days=26,
   month=May,
   year=2020,
@@ -323,7 +323,7 @@ No-reference Image Quality Model},
   author={Steve G\"oring and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
   title={Prenc -- Predict Number Of Video Encoding Passes With Machine Learning},
   BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
-  address="Athlone, Irland",
+  address="Athlone, Ireland",
   days=26,
   month=May,
   year=2020,
