--- a/bibs/goering2020prenc.bib
+++ b/bibs/goering2020prenc.bib
@@ -2,7 +2,7 @@
   author={Steve G\"oring and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
   title={Prenc -- Predict Number Of Video Encoding Passes With Machine Learning},
   BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
-  address="Athlone, Irland",
+  address="Athlone, Ireland",
   days=26,
   month=May,
   year=2020,
