--- a/bibs/rao2019Db.bib
+++ b/bibs/rao2019Db.bib
@@ -1,5 +1,5 @@
 @inproceedings{rao2019Db,
-    author = {Rakesh Rao Ramachandra Rao and Steve G\"oring and Werner Robitza and Bernhard Feiten and Alexander Raake},
+    author = {Rakesh {Rao Ramachandra Rao} and Steve G\"oring and Werner Robitza and Bernhard Feiten and Alexander Raake},
     title = {AVT-VQDB-UHD-1: A Large Scale Video Quality Database for UHD-1},
     booktitle={21st IEEE International Symposium on Multimedia (2019 IEEE ISM)},
     year = {2019},
