--- a/bibs/rao2020p1204.bib
+++ b/bibs/rao2020p1204.bib
@@ -1,5 +1,5 @@
 @inproceedings{rao2020p1204,
-  author={Rakesh Rao {Ramachandra Rao} and Steve G\"oring and Werner Robitza and Alexander Raake and Bernhard Feiten and Peter List and Ulf Wüstenhagen},
+  author={Rakesh {Rao Ramachandra Rao} and Steve G\"oring and Werner Robitza and Alexander Raake and Bernhard Feiten and Peter List and Ulf Wüstenhagen},
   title={Bitstream-based Model Standard for 4K/UHD: ITU-T P.1204.3 -- Model Details, Evaluation, Analysis and Open Source Implementation},
   BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Irland",
