--- a/bibs/singla2019vr.bib
+++ b/bibs/singla2019vr.bib
@@ -1,6 +1,6 @@
 @inproceedings{singla2019vr,
   address = {Osaka, Japan},
-  author = {Ashutosh Singla and Rakesh Rao Ramachandra Rao and Steve G{\"{o}}ring and Alexander Raake},
+  author = {Ashutosh Singla and Rakesh {Rao Ramachandra Rao} and Steve G{\"{o}}ring and Alexander Raake},
   booktitle = {26th IEEE Conference on Virtual Reality and 3D User Interfaces},
   title = {{Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols}},
   year = {2019},
