--- a/pub.bib
+++ b/pub.bib
@@ -236,7 +236,7 @@ No-reference Image Quality Model},
 
 @inproceedings{singla2019vr,
   address = {Osaka, Japan},
-  author = {Ashutosh Singla and Rakesh Rao Ramachandra Rao and Steve G{\"{o}}ring and Alexander Raake},
+  author = {Ashutosh Singla and Rakesh {Rao Ramachandra Rao} and Steve G{\"{o}}ring and Alexander Raake},
   booktitle = {26th IEEE Conference on Virtual Reality and 3D User Interfaces},
   title = {{Assessing Media QoE, Simulator Sickness and Presence for Omnidirectional Videos with Different Test Protocols}},
   year = {2019},
@@ -257,7 +257,7 @@ No-reference Image Quality Model},
 }
 
 @inproceedings{goering2019qomex,
-  author={Steve {G{\"o}ring} and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
+  author={Steve {G{\"o}ring} and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title="nofu - A Lightweight {No-Reference} Pixel Based Video Quality Model for
   Gaming Content",
   BOOKTITLE="2019 Eleventh International Conference on Quality of Multimedia Experience
@@ -288,7 +288,7 @@ No-reference Image Quality Model},
 }
 
 @inproceedings{rao2019Db,
-    author = {Rakesh Rao Ramachandra Rao and Steve G\"oring and Werner Robitza and Bernhard Feiten and Alexander Raake},
+    author = {Rakesh {Rao Ramachandra Rao} and Steve G\"oring and Werner Robitza and Bernhard Feiten and Alexander Raake},
     title = {AVT-VQDB-UHD-1: A Large Scale Video Quality Database for UHD-1},
     booktitle={21st IEEE International Symposium on Multimedia (2019 IEEE ISM)},
     year = {2019},
@@ -310,7 +310,7 @@ No-reference Image Quality Model},
 }
 
 @inproceedings{rao2020p1204,
-  author={Rakesh Rao {Ramachandra Rao} and Steve G\"oring and Werner Robitza and Alexander Raake and Bernhard Feiten and Peter List and Ulf Wüstenhagen},
+  author={Rakesh {Rao Ramachandra Rao} and Steve G\"oring and Werner Robitza and Alexander Raake and Bernhard Feiten and Peter List and Ulf Wüstenhagen},
   title={Bitstream-based Model Standard for 4K/UHD: ITU-T P.1204.3 -- Model Details, Evaluation, Analysis and Open Source Implementation},
   BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Irland",
@@ -320,7 +320,7 @@ No-reference Image Quality Model},
 }
 
 @inproceedings{goering2020prenc,
-  author={Steve G\"oring and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
+  author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title={Prenc -- Predict Number Of Video Encoding Passes With Machine Learning},
   BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Irland",
