--- a/bibs/goering2020prenc.bib
+++ b/bibs/goering2020prenc.bib
@@ -1,5 +1,5 @@
 @inproceedings{goering2020prenc,
-  author={Steve G\"oring and Rakesh Rao {Ramachandra Rao} and Alexander Raake},
+  author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title={Prenc -- Predict Number Of Video Encoding Passes With Machine Learning},
   BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Irland",
