add new publications

--- a/bibs/Gori1805_Extended.bib
+++ b/bibs/Gori1805_Extended.bib
@@ -2,8 +2,7 @@
   author={Steve {G{\"o}ring} and Konstantin Brand and Alexander Raake},
   title="Extended Features using Machine Learning Techniques for Photo Liking
   Prediction",
-  booktitle="2018 Tenth International Conference on Quality of Multimedia Experience
-  (QoMEX) (QoMEX 2018)",
+  booktitle="Tenth International Conference on Quality of Multimedia Experience (QoMEX)",
   address="Sardinia, Italy",
   days=28,
   month=5,
