--- a/bibs/fremerey2019qomex.bib
+++ b/bibs/fremerey2019qomex.bib
@@ -1,6 +1,6 @@
 @inproceedings{fremerey2019qomex,
   author={Stephan Fremerey and Frank Hofmeyer and Steve G{\"o}ring and Alexander Raake},
-  booktitle={2019 Eleventh International Conference on Quality of Multimedia Experience (QoMEX)},
+  booktitle={Eleventh International Conference on Quality of Multimedia Experience (QoMEX)},
   title={Impact of Various Motion Interpolation Algorithms on 360° Video QoE},
   year={2019},
   volume={},
