--- a/bibs/goering2017_81.bib
+++ b/bibs/goering2017_81.bib
@@ -1,6 +1,6 @@
 @inproceedings{goering2017_81,
   author={Steve G\"oring, Alexander Raake and Bernhard Feiten},
-  booktitle={2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
+  booktitle={Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
   title={A framework for QoE analysis of encrypted video streams},
   year={2017},
   pages={1-3},
