--- a/bibs/raake2017_71.bib
+++ b/bibs/raake2017_71.bib
@@ -1,6 +1,6 @@
 @inproceedings{raake2017_71,
   author       = {{Alexander Raake, Marie-Neige Garcia, Werner Robitza, Peter List, Steve G\"oring and Bernhard Feiten}},
-  booktitle={2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
+  booktitle={Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
   title={A bitstream-based, scalable video-quality model for HTTP adaptive streaming: ITU-T P.1203.1},
   year={2017},
   pages={1-6},
