--- a/bibs/rao2020p1204.bib
+++ b/bibs/rao2020p1204.bib
@@ -1,10 +1,11 @@
 @inproceedings{rao2020p1204,
   author={Rakesh {Rao Ramachandra Rao} and Steve G\"oring and Werner Robitza and Alexander Raake and Bernhard Feiten and Peter List and Ulf Wüstenhagen},
   title={Bitstream-based Model Standard for 4K/UHD: ITU-T P.1204.3 -- Model Details, Evaluation, Analysis and Open Source Implementation},
-  BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
+  BOOKTITLE={Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Ireland",
   days=26,
   month=May,
   year=2020,
+  url={https://www.researchgate.net/publication/341792225_Bitstream-based_Model_Standard_for_4KUHD_ITU-T_P12043_-_Model_Details_Evaluation_Analysis_and_Open_Source_Implementation}
 }
 
