--- a/bibs/robitza2018measuring.bib
+++ b/bibs/robitza2018measuring.bib
@@ -1,7 +1,7 @@
 @inproceedings{robitza2018measuring,
   title={Measuring YouTube QoE with ITU-T P. 1203 under Constrained Bandwidth Conditions},
   author={Robitza, Werner and Kittur, Dhananjaya G and Dethof, Alexander M and G{\"o}rin, Steve and Feiten, Bernhard and Raake, Alexander},
-  booktitle={2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX)},
+  booktitle={Tenth International Conference on Quality of Multimedia Experience (QoMEX)},
   pages={1--6},
   year={2018},
   organization={IEEE}
