--- a/pub.bib
+++ b/pub.bib
@@ -115,7 +115,7 @@
 
 @inproceedings{raake2017_71,
   author       = {{Alexander Raake, Marie-Neige Garcia, Werner Robitza, Peter List, Steve G\"oring and Bernhard Feiten}},
-  booktitle={2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
+  booktitle={Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
   title={A bitstream-based, scalable video-quality model for HTTP adaptive streaming: ITU-T P.1203.1},
   year={2017},
   pages={1-6},
@@ -127,7 +127,7 @@
 
 @inproceedings{goering2017_81,
   author={Steve G\"oring, Alexander Raake and Bernhard Feiten},
-  booktitle={2017 Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
+  booktitle={Ninth International Conference on Quality of Multimedia Experience (QoMEX)},
   title={A framework for QoE analysis of encrypted video streams},
   year={2017},
   pages={1-3},
@@ -152,8 +152,7 @@
   author={Steve {G{\"o}ring} and Konstantin Brand and Alexander Raake},
   title="Extended Features using Machine Learning Techniques for Photo Liking
   Prediction",
-  booktitle="2018 Tenth International Conference on Quality of Multimedia Experience
-  (QoMEX) (QoMEX 2018)",
+  booktitle="Tenth International Conference on Quality of Multimedia Experience (QoMEX)",
   address="Sardinia, Italy",
   days=28,
   month=5,
@@ -166,7 +165,7 @@
 @inproceedings{robitza2018measuring,
   title={Measuring YouTube QoE with ITU-T P. 1203 under Constrained Bandwidth Conditions},
   author={Robitza, Werner and Kittur, Dhananjaya G and Dethof, Alexander M and G{\"o}rin, Steve and Feiten, Bernhard and Raake, Alexander},
-  booktitle={2018 Tenth International Conference on Quality of Multimedia Experience (QoMEX)},
+  booktitle={Tenth International Conference on Quality of Multimedia Experience (QoMEX)},
   pages={1--6},
   year={2018},
   organization={IEEE}
@@ -187,7 +186,7 @@
   title={deimeq -- A Deep Neural Network Based Hybrid
 No-reference Image Quality Model},
   author={Steve G{\"{o}}ring and Alexander Raake},
-  booktitle={Visual Information Processing (EUVIP), 2018 7th European Workshop on},
+  booktitle={7th European Workshop on Visual Information Processing (EUVIP)},
   pages={1--6},
   year={2018},
   url={https://ieeexplore.ieee.org/document/8611703},
@@ -245,7 +244,7 @@ No-reference Image Quality Model},
 
 @inproceedings{fremerey2019qomex,
   author={Stephan Fremerey and Frank Hofmeyer and Steve G{\"o}ring and Alexander Raake},
-  booktitle={2019 Eleventh International Conference on Quality of Multimedia Experience (QoMEX)},
+  booktitle={Eleventh International Conference on Quality of Multimedia Experience (QoMEX)},
   title={Impact of Various Motion Interpolation Algorithms on 360° Video QoE},
   year={2019},
   volume={},
@@ -260,8 +259,8 @@ No-reference Image Quality Model},
   author={Steve {G{\"o}ring} and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title="nofu - A Lightweight {No-Reference} Pixel Based Video Quality Model for
   Gaming Content",
-  BOOKTITLE="2019 Eleventh International Conference on Quality of Multimedia Experience
-  (QoMEX) (QoMEX 2019)",
+  BOOKTITLE="Eleventh International Conference on Quality of Multimedia Experience
+  (QoMEX)",
   address="Berlin, Germany",
   days=4,
   month=jun,
@@ -277,7 +276,7 @@ No-reference Image Quality Model},
 @inproceedings{goering2019Intra,
   title={Evaluation of Intra-coding based image compression},
   author={Steve G{\"{o}}ring and Alexander Raake},
-  booktitle={2019 8th European Workshop on Visual Information Processing (EUVIP),},
+  booktitle={8th European Workshop on Visual Information Processing (EUVIP),},
   pages={1--6},
   year={2019},
   %url={https://ieeexplore.ieee.org/document/TBD},
@@ -312,29 +311,34 @@ No-reference Image Quality Model},
 @inproceedings{robitza2020,
   author={Werner Robitza and {Alexander M.} Dethof and Steve G\"oring and Alexander Raake and Tim Polzehl and Andre Beyer},
   title={Are You Still Watching? Streaming Video Quality and Engagement Assessment in the Crowd},
-  BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
+  BOOKTITLE={Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Ireland",
   days=26,
   month=May,
   year=2020,
+  url={https://www.researchgate.net/publication/341736567_Are_You_Still_Watching_Streaming_Video_Quality_and_Engagement_Assessment_in_the_Crowd}
 }
 
 @inproceedings{rao2020p1204,
   author={Rakesh {Rao Ramachandra Rao} and Steve G\"oring and Werner Robitza and Alexander Raake and Bernhard Feiten and Peter List and Ulf Wüstenhagen},
   title={Bitstream-based Model Standard for 4K/UHD: ITU-T P.1204.3 -- Model Details, Evaluation, Analysis and Open Source Implementation},
-  BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
+  BOOKTITLE={Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Ireland",
   days=26,
   month=May,
   year=2020,
+  url={https://www.researchgate.net/publication/341792225_Bitstream-based_Model_Standard_for_4KUHD_ITU-T_P12043_-_Model_Details_Evaluation_Analysis_and_Open_Source_Implementation}
 }
 
 @inproceedings{goering2020prenc,
   author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title={Prenc -- Predict Number Of Video Encoding Passes With Machine Learning},
-  BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
+  BOOKTITLE={Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Ireland",
   days=26,
   month=May,
   year=2020,
+  url={https://www.researchgate.net/publication/341791044_Prenc_-Predict_Number_Of_Video_Encoding_Passes_With_Machine_Learning},
+  slides={./pdfs/2020/prenc_presentation.pdf},
+  video={./pdfs/2020/prenc_video.mp4}
 }
