--- a/bibs/goering2018Deimeq.bib
+++ b/bibs/goering2018Deimeq.bib
@@ -2,7 +2,7 @@
   title={deimeq -- A Deep Neural Network Based Hybrid
 No-reference Image Quality Model},
   author={Steve G{\"{o}}ring and Alexander Raake},
-  booktitle={Visual Information Processing (EUVIP), 2018 7th European Workshop on},
+  booktitle={7th European Workshop on Visual Information Processing (EUVIP)},
   pages={1--6},
   year={2018},
   url={https://ieeexplore.ieee.org/document/8611703},
