--- a/bibs/goering2019Intra.bib
+++ b/bibs/goering2019Intra.bib
@@ -1,7 +1,7 @@
 @inproceedings{goering2019Intra,
   title={Evaluation of Intra-coding based image compression},
   author={Steve G{\"{o}}ring and Alexander Raake},
-  booktitle={2019 8th European Workshop on Visual Information Processing (EUVIP),},
+  booktitle={8th European Workshop on Visual Information Processing (EUVIP),},
   pages={1--6},
   year={2019},
   %url={https://ieeexplore.ieee.org/document/TBD},
