--- a/bibs/goering2019qomex.bib
+++ b/bibs/goering2019qomex.bib
@@ -2,8 +2,8 @@
   author={Steve {G{\"o}ring} and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title="nofu - A Lightweight {No-Reference} Pixel Based Video Quality Model for
   Gaming Content",
-  BOOKTITLE="2019 Eleventh International Conference on Quality of Multimedia Experience
-  (QoMEX) (QoMEX 2019)",
+  BOOKTITLE="Eleventh International Conference on Quality of Multimedia Experience
+  (QoMEX)",
   address="Berlin, Germany",
   days=4,
   month=jun,
