--- a/bibs/goering2020prenc.bib
+++ b/bibs/goering2020prenc.bib
@@ -1,9 +1,11 @@
 @inproceedings{goering2020prenc,
   author={Steve G\"oring and Rakesh {Rao Ramachandra Rao} and Alexander Raake},
   title={Prenc -- Predict Number Of Video Encoding Passes With Machine Learning},
-  BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
+  BOOKTITLE={Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Ireland",
   days=26,
   month=May,
   year=2020,
+  url={https://www.researchgate.net/publication/341791044_Prenc_-Predict_Number_Of_Video_Encoding_Passes_With_Machine_Learning},
+  video={./pdfs/2020/prenc_video.mp4}
 }
