--- a/bibs/robitza2020.bib
+++ b/bibs/robitza2020.bib
@@ -1,10 +1,11 @@
 @inproceedings{robitza2020,
   author={Werner Robitza and {Alexander M.} Dethof and Steve G\"oring and Alexander Raake and Tim Polzehl and Andre Beyer},
   title={Are You Still Watching? Streaming Video Quality and Engagement Assessment in the Crowd},
-  BOOKTITLE={2020 Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
+  BOOKTITLE={Twelfth International Conference on Quality of Multimedia Experience (QoMEX)},
   address="Athlone, Ireland",
   days=26,
   month=May,
   year=2020,
+  url={https://www.researchgate.net/publication/341736567_Are_You_Still_Watching_Streaming_Video_Quality_and_Engagement_Assessment_in_the_Crowd}
 }
 
