--- a/pub.bib
+++ b/pub.bib
@@ -210,7 +210,7 @@ No-reference Image Quality Model},
   journal = "Electronic Imaging, Human Vision Electronic Imaging",
   title={Are people pixel-peeping 360° videos?},
   year={2019},
-  url={https://ist.publisher.ingentaconnect.com/search/article?option2=author&value2=G%c3%b6ring%2c+Steve&pageSize=10&index=3}
+  url={https://www.ingentaconnect.com/content/ist/ei/2019/00002019/00000010/art00002}
 }
 
 
